--- a/modules.less
+++ b/modules.less
@@ -1,4 +1,4 @@
-/** 
+/**
  * Base theme including all modules needed.
  *
  * Each module is within its own
@@ -8,3 +8,21 @@
  * the same modules.
  */
 //@import url(some-module.less);
+
+// Reset, or normalize the browser style
+@import url(normalize.less);
+
+// Regions
+@import url(regions.less);
+
+// Responsive menu
+@import url(responsive-menu.less);
+
+// Header w\ Responsive for header and navbar
+@import url(header.less);
+
+// Footer w\ responsive
+@import url(footer.less);
+
+// Main and Sidebar w\ responsive
+@import url(main.less);
