--- a/modules/regions.less
+++ b/modules/regions.less
@@ -1,7 +1,7 @@
 /**
  * Regions, basics to show off the regions.
  */
-.wrap-all {
+/* .wrap-all {
     margin: 0 auto;
     max-width: 950px;
 }
@@ -86,3 +86,4 @@
 .site-header {
     position: relative;
 }
+*/
