Kmom04 Color done

--- a/modules/header.less
+++ b/modules/header.less
@@ -73,13 +73,11 @@
     }
 }
 
-
-@media screen and (max-width: 560px) {
-    .site-logo-text {
-        width: 85%;
-    }
-
-    .navbar2 {
+@media screen and (max-width: 750px) {
+    .rm-desktop {
         display: none;
+    }
+    .site-logo-text {
+        width: 75%;
     }
 }
