--- a/modules/main.less
+++ b/modules/main.less
@@ -7,6 +7,104 @@
     top: 25px;
 }
 
+.colors {
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    border: 1px solid #000;
+}
+
+.hboblack {
+    background-color: #030203;
+}
+
+.hboyellow {
+    background-color: #CD9908;
+}
+
+.hbowhite,
+.hemwhite,
+.rockwhite {
+    background-color: #FFF;
+}
+
+.hempink {
+    background-color: #FFDCEB;
+}
+
+.hempink2 {
+    background-color: #C7007B;
+}
+
+.hemblack,
+.rockblack {
+    background-color: #000;
+}
+
+.rockbrown {
+    background-color: #5D1818;
+}
+
+.base1 {
+    background-color: #277062;
+}
+
+.base2 {
+    background-color: #144E01;
+}
+
+.base3 {
+    background-color: grey;
+}
+
+.light1 {
+    background-color: #FFF;
+}
+
+.light2 {
+    background-color: #000;
+}
+
+.light3 {
+    background-color: #D3D3D3;
+}
+
+.color1 {
+    background-color: #F0FFFF;
+}
+
+.color2 {
+    background-color: #000;
+}
+
+.color3 {
+    background-color: #FFF;
+}
+
+.dark1 {
+    background-color: #FFF;
+}
+
+.dark2 {
+    background-color: #000;
+}
+
+.dark3 {
+    background-color: #010;
+}
+
+.colorful1 {
+    background-color: #ffff00;
+}
+
+.colorful2 {
+    background-color: #000;
+}
+
+.colorful3 {
+    background-color: #bfff00;
+}
+
 @media screen and (max-width: 700px) {
     .sidebar {
         display: none;
