--- a/modules/header.less
+++ b/modules/header.less
@@ -6,11 +6,16 @@
     height: 80px;
 }
 
+.site-logo-text-icon img {
+    width: 40px;
+    height: 40px;
+}
+
 .site-logo-text,
 .navbar2,
 .profile {
     float: left;
-    width: 30%;
+    width: 100%; //30%
 }
 
 .site-logo-text {
@@ -74,9 +79,6 @@
 }
 
 @media screen and (max-width: 750px) {
-    .rm-desktop {
-        display: none;
-    }
     .site-logo-text {
         width: 75%;
     }
