--- a/modules/main.less
+++ b/modules/main.less
@@ -105,8 +105,16 @@
     background-color: #bfff00;
 }
 
-@media screen and (max-width: 700px) {
-    .sidebar {
+.green {
+    background-color: green;
+}
+
+.grey {
+    background-color: #808080;
+}
+
+@media screen and (max-width: 360px) {
+    .site-logo-text-icon img {
         display: none;
     }
 }
