--- a/modules/figure.less
+++ b/modules/figure.less
@@ -8,10 +8,10 @@
     padding: 0;
     margin: 0;
     margin-bottom: @magicNumber - 4px;
-    border: 2px solid #7F6300;
+    // border: 2px solid #7F6300;
 
     a {
-        
+
     }
 
     img {
